Refactored API core and drivers.